finished edits on 'syntax_template.html'

--- a/templates/syntax_template.html
+++ b/templates/syntax_template.html
@@ -1,1 +1,4 @@
-<p>HTML uses tags to identify page content. <i>This text, for example, is a <b>paragraph.</b></i></p>
+<!DOCTYPE html>
+<html lang="en">
+    <p>HTML uses tags to identify page content. <i>This text, for example, is a <b>paragraph.</b></i></p>
+</html>
