finished edits on 'headings_template.html'

--- a/templates/headings_template.html
+++ b/templates/headings_template.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
     <head>
-    <meta charset="utf-8">
-    <title>Formatting page content</title>
+        <meta charset="utf-8">
+        <title>Formatting page content</title>
     </head>
     <body>
         <h1>HTML Essential Training</h1>
@@ -15,6 +15,6 @@
         <h3>Line breaks</h3>
         <p>Occasionally you'll need to perform a "soft return," that is, create a new line without using a new paragraph. To do that in HTML, you use the line break tag (&lang;br&rang;). Line break tags are inline, meaning you can use them within headers and paragraphs, and don't require a closing tag.
         Let's say you were formatting an address, for example. You could use line breaks to make sure each line of the address appeared on a separate line, but still remained within the same paragraph.
-        <br>lynda.com<br>Via Real<br>Carpinteria, CA 93103.</p>
+        lynda.com Via Real Carpinteria, CA 93103.</p>
     </body>
 </html>
